[package]
name = "shell-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
nix = { version = "0.29.0", features = ["signal"] }
rustyline = "15.0.0"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "macros", "process", "sync"] }
